--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@types/leaflet": "^1.9.20",
+    "axios": "^1.12.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.543.0",
+    "mysql2": "^3.14.5",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
